--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: '3.7'
 
 volumes:
   data:
@@ -8,23 +8,31 @@ services:
     container_name: mysql_dev
     image: mysql:5.7.32
     ports:
-      - 3306:3306
+      - '3306:3306'
     volumes:
       - data:/var/lib/mysql
     environment:
-      - MYSQL_USER: user
-      - MYSQL_PASSWORD: user
-      - MYSQL_ROOT_PASSWORD: root
-      - MYSQL_DATABASE: default
+      MYSQL_USER: 'user'
+      MYSQL_PASSWORD: 'user'
+      MYSQL_ROOT_PASSWORD: 'root'
+      MYSQL_DATABASE: 'default'
+    networks:
+      - mysql-phpmyadmin-network
 
   phpmyadmin:
     container_name: phpmyadmin_dev
     image: phpmyadmin/phpmyadmin:latest
-    links:
+    depends_on:
       - mysql
     ports:
-      - 7777:80
+      - '7777:80'
     environment:
-      - PMA_ARBITRARY: 1
-      - PMA_HOST: mysql
-      - PMA_PORT: 3306
+      PMA_ARBITRARY: '1'
+      PMA_HOST: 'mysql'
+      PMA_PORT: '3306'
+    networks:
+      - mysql-phpmyadmin-network
+
+networks: 
+  mysql-phpmyadmin-network:
+    driver: bridge
