--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.7'
 
-volumes:
-  data:
+# volumes:
+#  data:
 
 services:
   mysql:
@@ -10,7 +10,8 @@ services:
     ports:
       - '3306:3306'
     volumes:
-      - data:/var/lib/mysql
+#      - data:/var/lib/mysql
+      - /home/jonilson/docker/volumes/mysql_5.7.32:/var/lib/mysql
     environment:
       MYSQL_USER: 'user'
       MYSQL_PASSWORD: 'user'
